--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,16 @@
-<!--{{5 | currency: 2}}-->
-
-
-<!--<h1 appHover="yellow">-->
-<!--  Hello!-->
-<!--</h1>-->
-
-<!--<h1 appHover>-->
-<!--  Hello!-->
-<!--</h1>-->
-<button (click)="renderLogin()" [ngClass]="['btn_main']">
+<button (click)="renderLogin()"
+        [ngClass]="['btn_main']"
+        appHover>
   Login
 </button>
-<button (click)="renderRegister()" [ngClass]="['btn_main']">
+<button (click)="renderRegister()"
+        [ngClass]="['btn_main']"
+        appHover>
   Register
 </button>
-<button (click)="renderCreateFlat()" [ngClass]="['btn_main']">
+<button (click)="renderCreateFlat()"
+        [ngClass]="['btn_main']"
+        appHover>
   Create Flat
 </button>
 
